--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tiptap/extension-font-family": "^2.10.2",
+    "@tiptap/extension-heading": "^2.10.2",
     "@tiptap/extension-image": "^2.10.2",
     "@tiptap/extension-table": "^2.10.2",
     "@tiptap/extension-table-cell": "^2.10.2",
@@ -18,6 +21,7 @@
     "@tiptap/extension-table-row": "^2.10.2",
     "@tiptap/extension-task-item": "^2.10.2",
     "@tiptap/extension-task-list": "^2.10.2",
+    "@tiptap/extension-text-style": "^2.10.2",
     "@tiptap/extension-underline": "^2.10.2",
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
