--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tiptap/extension-color": "^2.10.2",
     "@tiptap/extension-font-family": "^2.10.2",
     "@tiptap/extension-heading": "^2.10.2",
+    "@tiptap/extension-highlight": "^2.10.2",
     "@tiptap/extension-image": "^2.10.2",
     "@tiptap/extension-table": "^2.10.2",
     "@tiptap/extension-table-cell": "^2.10.2",
@@ -21,7 +23,7 @@
     "@tiptap/extension-table-row": "^2.10.2",
     "@tiptap/extension-task-item": "^2.10.2",
     "@tiptap/extension-task-list": "^2.10.2",
-    "@tiptap/extension-text-style": "^2.10.2",
+    "@tiptap/extension-text-style": "^2.10.3",
     "@tiptap/extension-underline": "^2.10.2",
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
@@ -31,6 +33,7 @@
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
