--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -17,6 +18,7 @@
     "@tiptap/extension-heading": "^2.10.2",
     "@tiptap/extension-highlight": "^2.10.2",
     "@tiptap/extension-image": "^2.10.2",
+    "@tiptap/extension-link": "^2.10.2",
     "@tiptap/extension-table": "^2.10.2",
     "@tiptap/extension-table-cell": "^2.10.2",
     "@tiptap/extension-table-header": "^2.10.2",
